add owner and title params in GetDocs
